--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gulp start</title>
-
-    <!--fonts-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    
-    <!--styles-->
-    <link rel="stylesheet" href="assets/css/style.min.css"> 
-</head>
-<body>
-
-    <h1 class="title">Start with Gulp!</h1>
-    <p>Create beautiful websites with useful and convenient task-manager.</p>
-
-
-    <!--js-->
-    <script src="assets/js/main.js"></script> 
-</body>
-</html>
+---
+layout: default
+---
